refactor(backend): 审查修正——网关端口 9090、Refresh Token 单设备会话、公共字段自动填充与键空间隔离